playgroundChaima/syntaxique.output
Terminals unused in grammar

   TYPE_NUM
   TYPE_REAL
   TYPE_TEXT
   TYPE_SIGNEDNUM
   TYPE_SIGNEDREAL
   type_variable
   TANTQUE
   FAIRE
   CROCHET_OUVRANT
   CROCHET_FERMANT
   DIFFERENT
   INF_EGAL
   SUP_EGAL
   OU
   ET
   NON
   ERR


Grammar

    0 $accept: programme $end

    1 programme: DEBUT declarations EXECUTION bloc FIN

    2 declarations: declaration declarations
    3             | /* empty */

    4 declaration: FIXE NUM DEUX_POINTS IDF EGAL NUM POINT_VIRGULE
    5            | FIXE SIGNEDNUM DEUX_POINTS IDF EGAL SIGNEDNUM POINT_VIRGULE
    6            | FIXE REAL DEUX_POINTS IDF EGAL REAL POINT_VIRGULE
    7            | FIXE SIGNEDREAL DEUX_POINTS IDF EGAL SIGNEDREAL POINT_VIRGULE
    8            | FIXE TEXT DEUX_POINTS IDF EGAL TEXT POINT_VIRGULE
    9            | NUM DEUX_POINTS IDF POINT_VIRGULE
   10            | SIGNEDNUM DEUX_POINTS IDF POINT_VIRGULE
   11            | REAL DEUX_POINTS IDF POINT_VIRGULE
   12            | SIGNEDREAL DEUX_POINTS IDF POINT_VIRGULE
   13            | TEXT DEUX_POINTS IDF POINT_VIRGULE

   14 bloc: ACCOLADE_OUVRANTE instructions ACCOLADE_FERMANTE

   15 instructions: instruction instructions
   16             | /* empty */

   17 instruction: AFFICHE PARENTHOISE_OUVRANTE liste_arguments PARENTHOISE_FERMANTE POINT_VIRGULE
   18            | LIRE IDF POINT_VIRGULE
   19            | condition
   20            | affect

   21 condition: SI PARENTHOISE_OUVRANTE expression_comparative PARENTHOISE_FERMANTE ALORS bloc SINON bloc
   22          | SI PARENTHOISE_OUVRANTE expression_comparative PARENTHOISE_FERMANTE ALORS bloc SINON condition
   23          | SI PARENTHOISE_OUVRANTE expression_comparative PARENTHOISE_FERMANTE ALORS bloc SINON LOWER
   24          | SI PARENTHOISE_OUVRANTE expression_comparative PARENTHOISE_FERMANTE ALORS bloc

   25 liste_arguments: TEXT
   26                | IDF
   27                | liste_arguments VIRGULE TEXT
   28                | liste_arguments VIRGULE IDF

   29 expression_comparative: NUM INF NUM
   30                       | SIGNEDNUM INF SIGNEDNUM
   31                       | REAL INF REAL
   32                       | SIGNEDREAL INF SIGNEDREAL
   33                       | NUM SUP NUM
   34                       | SIGNEDNUM SUP SIGNEDNUM
   35                       | REAL SUP REAL
   36                       | SIGNEDREAL SUP SIGNEDREAL
   37                       | NUM EGAL NUM
   38                       | SIGNEDNUM EGAL SIGNEDNUM
   39                       | REAL EGAL REAL
   40                       | SIGNEDREAL EGAL SIGNEDREAL

   41 affect: IDF AFFECTION expression_arithmetique POINT_VIRGULE
   42       | IDF AFFECTION IDF POINT_VIRGULE

   43 expression_arithmetique: NUM PLUS NUM
   44                        | SIGNEDNUM PLUS SIGNEDNUM
   45                        | REAL PLUS REAL
   46                        | SIGNEDREAL PLUS SIGNEDREAL
   47                        | IDF PLUS NUM
   48                        | NUM PLUS IDF
   49                        | IDF PLUS IDF
   50                        | NUM MOINS NUM
   51                        | SIGNEDNUM MOINS SIGNEDNUM
   52                        | REAL MOINS REAL
   53                        | SIGNEDREAL MOINS SIGNEDREAL
   54                        | IDF MOINS NUM
   55                        | NUM MOINS IDF
   56                        | IDF MOINS IDF
   57                        | NUM MULT NUM
   58                        | SIGNEDNUM MULT SIGNEDNUM
   59                        | REAL MULT REAL
   60                        | SIGNEDREAL MULT SIGNEDREAL
   61                        | IDF MULT NUM
   62                        | NUM MULT IDF
   63                        | IDF MULT IDF
   64                        | NUM DIV NUM
   65                        | SIGNEDNUM DIV SIGNEDNUM
   66                        | REAL DIV REAL
   67                        | SIGNEDREAL DIV SIGNEDREAL
   68                        | IDF DIV NUM
   69                        | NUM DIV IDF
   70                        | IDF DIV IDF


Terminals, with rules where they appear

$end (0) 0
error (256)
NUM (258) 4 9 29 33 37 43 47 48 50 54 55 57 61 62 64 68 69
SIGNEDNUM (259) 5 10 30 34 38 44 51 58 65
REAL (260) 6 11 31 35 39 45 52 59 66
SIGNEDREAL (261) 7 12 32 36 40 46 53 60 67
TEXT (262) 8 13 25 27
IDF (263) 4 5 6 7 8 9 10 11 12 13 18 26 28 41 42 47 48 49 54 55 56
    61 62 63 68 69 70
TYPE_NUM (264)
TYPE_REAL (265)
TYPE_TEXT (266)
TYPE_SIGNEDNUM (267)
TYPE_SIGNEDREAL (268)
type_variable (269)
SI (270) 21 22 23 24
ALORS (271) 21 22 23 24
SINON (272) 21 22 23
TANTQUE (273)
FAIRE (274)
DEBUT (275) 1
FIN (276) 1
EXECUTION (277) 1
FIXE (278) 4 5 6 7 8
AFFICHE (279) 17
LIRE (280) 18
ACCOLADE_OUVRANTE (281) 14
ACCOLADE_FERMANTE (282) 14
PARENTHOISE_OUVRANTE (283) 17 21 22 23 24
PARENTHOISE_FERMANTE (284) 17 21 22 23 24
CROCHET_OUVRANT (285)
CROCHET_FERMANT (286)
PLUS (287) 43 44 45 46 47 48 49
MOINS (288) 50 51 52 53 54 55 56
MULT (289) 57 58 59 60 61 62 63
DIV (290) 64 65 66 67 68 69 70
VIRGULE (291) 27 28
POINT_VIRGULE (292) 4 5 6 7 8 9 10 11 12 13 17 18 41 42
DEUX_POINTS (293) 4 5 6 7 8 9 10 11 12 13
EGAL (294) 4 5 6 7 8 37 38 39 40
INF (295) 29 30 31 32
SUP (296) 33 34 35 36
DIFFERENT (297)
INF_EGAL (298)
SUP_EGAL (299)
AFFECTION (300) 41 42
OU (301)
ET (302)
NON (303)
ERR (304)
LOWER (305) 23


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
programme (52)
    on left: 1, on right: 0
declarations (53)
    on left: 2 3, on right: 1 2
declaration (54)
    on left: 4 5 6 7 8 9 10 11 12 13, on right: 2
bloc (55)
    on left: 14, on right: 1 21 22 23 24
instructions (56)
    on left: 15 16, on right: 14 15
instruction (57)
    on left: 17 18 19 20, on right: 15
condition (58)
    on left: 21 22 23 24, on right: 19 22
liste_arguments (59)
    on left: 25 26 27 28, on right: 17 27 28
expression_comparative (60)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40, on right: 21 22 23
    24
affect (61)
    on left: 41 42, on right: 20
expression_arithmetique (62)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65 66 67 68 69 70, on right: 41


state 0

    0 $accept: . programme $end

    DEBUT  shift, and go to state 1

    programme  go to state 2


state 1

    1 programme: DEBUT . declarations EXECUTION bloc FIN

    NUM         shift, and go to state 3
    SIGNEDNUM   shift, and go to state 4
    REAL        shift, and go to state 5
    SIGNEDREAL  shift, and go to state 6
    TEXT        shift, and go to state 7
    FIXE        shift, and go to state 8

    $default  reduce using rule 3 (declarations)

    declarations  go to state 9
    declaration   go to state 10


state 2

    0 $accept: programme . $end

    $end  shift, and go to state 11


state 3

    9 declaration: NUM . DEUX_POINTS IDF POINT_VIRGULE

    DEUX_POINTS  shift, and go to state 12


state 4

   10 declaration: SIGNEDNUM . DEUX_POINTS IDF POINT_VIRGULE

    DEUX_POINTS  shift, and go to state 13


state 5

   11 declaration: REAL . DEUX_POINTS IDF POINT_VIRGULE

    DEUX_POINTS  shift, and go to state 14


state 6

   12 declaration: SIGNEDREAL . DEUX_POINTS IDF POINT_VIRGULE

    DEUX_POINTS  shift, and go to state 15


state 7

   13 declaration: TEXT . DEUX_POINTS IDF POINT_VIRGULE

    DEUX_POINTS  shift, and go to state 16


state 8

    4 declaration: FIXE . NUM DEUX_POINTS IDF EGAL NUM POINT_VIRGULE
    5            | FIXE . SIGNEDNUM DEUX_POINTS IDF EGAL SIGNEDNUM POINT_VIRGULE
    6            | FIXE . REAL DEUX_POINTS IDF EGAL REAL POINT_VIRGULE
    7            | FIXE . SIGNEDREAL DEUX_POINTS IDF EGAL SIGNEDREAL POINT_VIRGULE
    8            | FIXE . TEXT DEUX_POINTS IDF EGAL TEXT POINT_VIRGULE

    NUM         shift, and go to state 17
    SIGNEDNUM   shift, and go to state 18
    REAL        shift, and go to state 19
    SIGNEDREAL  shift, and go to state 20
    TEXT        shift, and go to state 21


state 9

    1 programme: DEBUT declarations . EXECUTION bloc FIN

    EXECUTION  shift, and go to state 22


state 10

    2 declarations: declaration . declarations

    NUM         shift, and go to state 3
    SIGNEDNUM   shift, and go to state 4
    REAL        shift, and go to state 5
    SIGNEDREAL  shift, and go to state 6
    TEXT        shift, and go to state 7
    FIXE        shift, and go to state 8

    $default  reduce using rule 3 (declarations)

    declarations  go to state 23
    declaration   go to state 10


state 11

    0 $accept: programme $end .

    $default  accept


state 12

    9 declaration: NUM DEUX_POINTS . IDF POINT_VIRGULE

    IDF  shift, and go to state 24


state 13

   10 declaration: SIGNEDNUM DEUX_POINTS . IDF POINT_VIRGULE

    IDF  shift, and go to state 25


state 14

   11 declaration: REAL DEUX_POINTS . IDF POINT_VIRGULE

    IDF  shift, and go to state 26


state 15

   12 declaration: SIGNEDREAL DEUX_POINTS . IDF POINT_VIRGULE

    IDF  shift, and go to state 27


state 16

   13 declaration: TEXT DEUX_POINTS . IDF POINT_VIRGULE

    IDF  shift, and go to state 28


state 17

    4 declaration: FIXE NUM . DEUX_POINTS IDF EGAL NUM POINT_VIRGULE

    DEUX_POINTS  shift, and go to state 29


state 18

    5 declaration: FIXE SIGNEDNUM . DEUX_POINTS IDF EGAL SIGNEDNUM POINT_VIRGULE

    DEUX_POINTS  shift, and go to state 30


state 19

    6 declaration: FIXE REAL . DEUX_POINTS IDF EGAL REAL POINT_VIRGULE

    DEUX_POINTS  shift, and go to state 31


state 20

    7 declaration: FIXE SIGNEDREAL . DEUX_POINTS IDF EGAL SIGNEDREAL POINT_VIRGULE

    DEUX_POINTS  shift, and go to state 32


state 21

    8 declaration: FIXE TEXT . DEUX_POINTS IDF EGAL TEXT POINT_VIRGULE

    DEUX_POINTS  shift, and go to state 33


state 22

    1 programme: DEBUT declarations EXECUTION . bloc FIN

    ACCOLADE_OUVRANTE  shift, and go to state 34

    bloc  go to state 35


state 23

    2 declarations: declaration declarations .

    $default  reduce using rule 2 (declarations)


state 24

    9 declaration: NUM DEUX_POINTS IDF . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 36


state 25

   10 declaration: SIGNEDNUM DEUX_POINTS IDF . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 37


state 26

   11 declaration: REAL DEUX_POINTS IDF . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 38


state 27

   12 declaration: SIGNEDREAL DEUX_POINTS IDF . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 39


state 28

   13 declaration: TEXT DEUX_POINTS IDF . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 40


state 29

    4 declaration: FIXE NUM DEUX_POINTS . IDF EGAL NUM POINT_VIRGULE

    IDF  shift, and go to state 41


state 30

    5 declaration: FIXE SIGNEDNUM DEUX_POINTS . IDF EGAL SIGNEDNUM POINT_VIRGULE

    IDF  shift, and go to state 42


state 31

    6 declaration: FIXE REAL DEUX_POINTS . IDF EGAL REAL POINT_VIRGULE

    IDF  shift, and go to state 43


state 32

    7 declaration: FIXE SIGNEDREAL DEUX_POINTS . IDF EGAL SIGNEDREAL POINT_VIRGULE

    IDF  shift, and go to state 44


state 33

    8 declaration: FIXE TEXT DEUX_POINTS . IDF EGAL TEXT POINT_VIRGULE

    IDF  shift, and go to state 45


state 34

   14 bloc: ACCOLADE_OUVRANTE . instructions ACCOLADE_FERMANTE

    IDF      shift, and go to state 46
    SI       shift, and go to state 47
    AFFICHE  shift, and go to state 48
    LIRE     shift, and go to state 49

    $default  reduce using rule 16 (instructions)

    instructions  go to state 50
    instruction   go to state 51
    condition     go to state 52
    affect        go to state 53


state 35

    1 programme: DEBUT declarations EXECUTION bloc . FIN

    FIN  shift, and go to state 54


state 36

    9 declaration: NUM DEUX_POINTS IDF POINT_VIRGULE .

    $default  reduce using rule 9 (declaration)


state 37

   10 declaration: SIGNEDNUM DEUX_POINTS IDF POINT_VIRGULE .

    $default  reduce using rule 10 (declaration)


state 38

   11 declaration: REAL DEUX_POINTS IDF POINT_VIRGULE .

    $default  reduce using rule 11 (declaration)


state 39

   12 declaration: SIGNEDREAL DEUX_POINTS IDF POINT_VIRGULE .

    $default  reduce using rule 12 (declaration)


state 40

   13 declaration: TEXT DEUX_POINTS IDF POINT_VIRGULE .

    $default  reduce using rule 13 (declaration)


state 41

    4 declaration: FIXE NUM DEUX_POINTS IDF . EGAL NUM POINT_VIRGULE

    EGAL  shift, and go to state 55


state 42

    5 declaration: FIXE SIGNEDNUM DEUX_POINTS IDF . EGAL SIGNEDNUM POINT_VIRGULE

    EGAL  shift, and go to state 56


state 43

    6 declaration: FIXE REAL DEUX_POINTS IDF . EGAL REAL POINT_VIRGULE

    EGAL  shift, and go to state 57


state 44

    7 declaration: FIXE SIGNEDREAL DEUX_POINTS IDF . EGAL SIGNEDREAL POINT_VIRGULE

    EGAL  shift, and go to state 58


state 45

    8 declaration: FIXE TEXT DEUX_POINTS IDF . EGAL TEXT POINT_VIRGULE

    EGAL  shift, and go to state 59


state 46

   41 affect: IDF . AFFECTION expression_arithmetique POINT_VIRGULE
   42       | IDF . AFFECTION IDF POINT_VIRGULE

    AFFECTION  shift, and go to state 60


state 47

   21 condition: SI . PARENTHOISE_OUVRANTE expression_comparative PARENTHOISE_FERMANTE ALORS bloc SINON bloc
   22          | SI . PARENTHOISE_OUVRANTE expression_comparative PARENTHOISE_FERMANTE ALORS bloc SINON condition
   23          | SI . PARENTHOISE_OUVRANTE expression_comparative PARENTHOISE_FERMANTE ALORS bloc SINON LOWER
   24          | SI . PARENTHOISE_OUVRANTE expression_comparative PARENTHOISE_FERMANTE ALORS bloc

    PARENTHOISE_OUVRANTE  shift, and go to state 61


state 48

   17 instruction: AFFICHE . PARENTHOISE_OUVRANTE liste_arguments PARENTHOISE_FERMANTE POINT_VIRGULE

    PARENTHOISE_OUVRANTE  shift, and go to state 62


state 49

   18 instruction: LIRE . IDF POINT_VIRGULE

    IDF  shift, and go to state 63


state 50

   14 bloc: ACCOLADE_OUVRANTE instructions . ACCOLADE_FERMANTE

    ACCOLADE_FERMANTE  shift, and go to state 64


state 51

   15 instructions: instruction . instructions

    IDF      shift, and go to state 46
    SI       shift, and go to state 47
    AFFICHE  shift, and go to state 48
    LIRE     shift, and go to state 49

    $default  reduce using rule 16 (instructions)

    instructions  go to state 65
    instruction   go to state 51
    condition     go to state 52
    affect        go to state 53


state 52

   19 instruction: condition .

    $default  reduce using rule 19 (instruction)


state 53

   20 instruction: affect .

    $default  reduce using rule 20 (instruction)


state 54

    1 programme: DEBUT declarations EXECUTION bloc FIN .

    $default  reduce using rule 1 (programme)


state 55

    4 declaration: FIXE NUM DEUX_POINTS IDF EGAL . NUM POINT_VIRGULE

    NUM  shift, and go to state 66


state 56

    5 declaration: FIXE SIGNEDNUM DEUX_POINTS IDF EGAL . SIGNEDNUM POINT_VIRGULE

    SIGNEDNUM  shift, and go to state 67


state 57

    6 declaration: FIXE REAL DEUX_POINTS IDF EGAL . REAL POINT_VIRGULE

    REAL  shift, and go to state 68


state 58

    7 declaration: FIXE SIGNEDREAL DEUX_POINTS IDF EGAL . SIGNEDREAL POINT_VIRGULE

    SIGNEDREAL  shift, and go to state 69


state 59

    8 declaration: FIXE TEXT DEUX_POINTS IDF EGAL . TEXT POINT_VIRGULE

    TEXT  shift, and go to state 70


state 60

   41 affect: IDF AFFECTION . expression_arithmetique POINT_VIRGULE
   42       | IDF AFFECTION . IDF POINT_VIRGULE

    NUM         shift, and go to state 71
    SIGNEDNUM   shift, and go to state 72
    REAL        shift, and go to state 73
    SIGNEDREAL  shift, and go to state 74
    IDF         shift, and go to state 75

    expression_arithmetique  go to state 76


state 61

   21 condition: SI PARENTHOISE_OUVRANTE . expression_comparative PARENTHOISE_FERMANTE ALORS bloc SINON bloc
   22          | SI PARENTHOISE_OUVRANTE . expression_comparative PARENTHOISE_FERMANTE ALORS bloc SINON condition
   23          | SI PARENTHOISE_OUVRANTE . expression_comparative PARENTHOISE_FERMANTE ALORS bloc SINON LOWER
   24          | SI PARENTHOISE_OUVRANTE . expression_comparative PARENTHOISE_FERMANTE ALORS bloc

    NUM         shift, and go to state 77
    SIGNEDNUM   shift, and go to state 78
    REAL        shift, and go to state 79
    SIGNEDREAL  shift, and go to state 80

    expression_comparative  go to state 81


state 62

   17 instruction: AFFICHE PARENTHOISE_OUVRANTE . liste_arguments PARENTHOISE_FERMANTE POINT_VIRGULE

    TEXT  shift, and go to state 82
    IDF   shift, and go to state 83

    liste_arguments  go to state 84


state 63

   18 instruction: LIRE IDF . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 85


state 64

   14 bloc: ACCOLADE_OUVRANTE instructions ACCOLADE_FERMANTE .

    $default  reduce using rule 14 (bloc)


state 65

   15 instructions: instruction instructions .

    $default  reduce using rule 15 (instructions)


state 66

    4 declaration: FIXE NUM DEUX_POINTS IDF EGAL NUM . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 86


state 67

    5 declaration: FIXE SIGNEDNUM DEUX_POINTS IDF EGAL SIGNEDNUM . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 87


state 68

    6 declaration: FIXE REAL DEUX_POINTS IDF EGAL REAL . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 88


state 69

    7 declaration: FIXE SIGNEDREAL DEUX_POINTS IDF EGAL SIGNEDREAL . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 89


state 70

    8 declaration: FIXE TEXT DEUX_POINTS IDF EGAL TEXT . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 90


state 71

   43 expression_arithmetique: NUM . PLUS NUM
   48                        | NUM . PLUS IDF
   50                        | NUM . MOINS NUM
   55                        | NUM . MOINS IDF
   57                        | NUM . MULT NUM
   62                        | NUM . MULT IDF
   64                        | NUM . DIV NUM
   69                        | NUM . DIV IDF

    PLUS   shift, and go to state 91
    MOINS  shift, and go to state 92
    MULT   shift, and go to state 93
    DIV    shift, and go to state 94


state 72

   44 expression_arithmetique: SIGNEDNUM . PLUS SIGNEDNUM
   51                        | SIGNEDNUM . MOINS SIGNEDNUM
   58                        | SIGNEDNUM . MULT SIGNEDNUM
   65                        | SIGNEDNUM . DIV SIGNEDNUM

    PLUS   shift, and go to state 95
    MOINS  shift, and go to state 96
    MULT   shift, and go to state 97
    DIV    shift, and go to state 98


state 73

   45 expression_arithmetique: REAL . PLUS REAL
   52                        | REAL . MOINS REAL
   59                        | REAL . MULT REAL
   66                        | REAL . DIV REAL

    PLUS   shift, and go to state 99
    MOINS  shift, and go to state 100
    MULT   shift, and go to state 101
    DIV    shift, and go to state 102


state 74

   46 expression_arithmetique: SIGNEDREAL . PLUS SIGNEDREAL
   53                        | SIGNEDREAL . MOINS SIGNEDREAL
   60                        | SIGNEDREAL . MULT SIGNEDREAL
   67                        | SIGNEDREAL . DIV SIGNEDREAL

    PLUS   shift, and go to state 103
    MOINS  shift, and go to state 104
    MULT   shift, and go to state 105
    DIV    shift, and go to state 106


state 75

   42 affect: IDF AFFECTION IDF . POINT_VIRGULE
   47 expression_arithmetique: IDF . PLUS NUM
   49                        | IDF . PLUS IDF
   54                        | IDF . MOINS NUM
   56                        | IDF . MOINS IDF
   61                        | IDF . MULT NUM
   63                        | IDF . MULT IDF
   68                        | IDF . DIV NUM
   70                        | IDF . DIV IDF

    PLUS           shift, and go to state 107
    MOINS          shift, and go to state 108
    MULT           shift, and go to state 109
    DIV            shift, and go to state 110
    POINT_VIRGULE  shift, and go to state 111


state 76

   41 affect: IDF AFFECTION expression_arithmetique . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 112


state 77

   29 expression_comparative: NUM . INF NUM
   33                       | NUM . SUP NUM
   37                       | NUM . EGAL NUM

    EGAL  shift, and go to state 113
    INF   shift, and go to state 114
    SUP   shift, and go to state 115


state 78

   30 expression_comparative: SIGNEDNUM . INF SIGNEDNUM
   34                       | SIGNEDNUM . SUP SIGNEDNUM
   38                       | SIGNEDNUM . EGAL SIGNEDNUM

    EGAL  shift, and go to state 116
    INF   shift, and go to state 117
    SUP   shift, and go to state 118


state 79

   31 expression_comparative: REAL . INF REAL
   35                       | REAL . SUP REAL
   39                       | REAL . EGAL REAL

    EGAL  shift, and go to state 119
    INF   shift, and go to state 120
    SUP   shift, and go to state 121


state 80

   32 expression_comparative: SIGNEDREAL . INF SIGNEDREAL
   36                       | SIGNEDREAL . SUP SIGNEDREAL
   40                       | SIGNEDREAL . EGAL SIGNEDREAL

    EGAL  shift, and go to state 122
    INF   shift, and go to state 123
    SUP   shift, and go to state 124


state 81

   21 condition: SI PARENTHOISE_OUVRANTE expression_comparative . PARENTHOISE_FERMANTE ALORS bloc SINON bloc
   22          | SI PARENTHOISE_OUVRANTE expression_comparative . PARENTHOISE_FERMANTE ALORS bloc SINON condition
   23          | SI PARENTHOISE_OUVRANTE expression_comparative . PARENTHOISE_FERMANTE ALORS bloc SINON LOWER
   24          | SI PARENTHOISE_OUVRANTE expression_comparative . PARENTHOISE_FERMANTE ALORS bloc

    PARENTHOISE_FERMANTE  shift, and go to state 125


state 82

   25 liste_arguments: TEXT .

    $default  reduce using rule 25 (liste_arguments)


state 83

   26 liste_arguments: IDF .

    $default  reduce using rule 26 (liste_arguments)


state 84

   17 instruction: AFFICHE PARENTHOISE_OUVRANTE liste_arguments . PARENTHOISE_FERMANTE POINT_VIRGULE
   27 liste_arguments: liste_arguments . VIRGULE TEXT
   28                | liste_arguments . VIRGULE IDF

    PARENTHOISE_FERMANTE  shift, and go to state 126
    VIRGULE               shift, and go to state 127


state 85

   18 instruction: LIRE IDF POINT_VIRGULE .

    $default  reduce using rule 18 (instruction)


state 86

    4 declaration: FIXE NUM DEUX_POINTS IDF EGAL NUM POINT_VIRGULE .

    $default  reduce using rule 4 (declaration)


state 87

    5 declaration: FIXE SIGNEDNUM DEUX_POINTS IDF EGAL SIGNEDNUM POINT_VIRGULE .

    $default  reduce using rule 5 (declaration)


state 88

    6 declaration: FIXE REAL DEUX_POINTS IDF EGAL REAL POINT_VIRGULE .

    $default  reduce using rule 6 (declaration)


state 89

    7 declaration: FIXE SIGNEDREAL DEUX_POINTS IDF EGAL SIGNEDREAL POINT_VIRGULE .

    $default  reduce using rule 7 (declaration)


state 90

    8 declaration: FIXE TEXT DEUX_POINTS IDF EGAL TEXT POINT_VIRGULE .

    $default  reduce using rule 8 (declaration)


state 91

   43 expression_arithmetique: NUM PLUS . NUM
   48                        | NUM PLUS . IDF

    NUM  shift, and go to state 128
    IDF  shift, and go to state 129


state 92

   50 expression_arithmetique: NUM MOINS . NUM
   55                        | NUM MOINS . IDF

    NUM  shift, and go to state 130
    IDF  shift, and go to state 131


state 93

   57 expression_arithmetique: NUM MULT . NUM
   62                        | NUM MULT . IDF

    NUM  shift, and go to state 132
    IDF  shift, and go to state 133


state 94

   64 expression_arithmetique: NUM DIV . NUM
   69                        | NUM DIV . IDF

    NUM  shift, and go to state 134
    IDF  shift, and go to state 135


state 95

   44 expression_arithmetique: SIGNEDNUM PLUS . SIGNEDNUM

    SIGNEDNUM  shift, and go to state 136


state 96

   51 expression_arithmetique: SIGNEDNUM MOINS . SIGNEDNUM

    SIGNEDNUM  shift, and go to state 137


state 97

   58 expression_arithmetique: SIGNEDNUM MULT . SIGNEDNUM

    SIGNEDNUM  shift, and go to state 138


state 98

   65 expression_arithmetique: SIGNEDNUM DIV . SIGNEDNUM

    SIGNEDNUM  shift, and go to state 139


state 99

   45 expression_arithmetique: REAL PLUS . REAL

    REAL  shift, and go to state 140


state 100

   52 expression_arithmetique: REAL MOINS . REAL

    REAL  shift, and go to state 141


state 101

   59 expression_arithmetique: REAL MULT . REAL

    REAL  shift, and go to state 142


state 102

   66 expression_arithmetique: REAL DIV . REAL

    REAL  shift, and go to state 143


state 103

   46 expression_arithmetique: SIGNEDREAL PLUS . SIGNEDREAL

    SIGNEDREAL  shift, and go to state 144


state 104

   53 expression_arithmetique: SIGNEDREAL MOINS . SIGNEDREAL

    SIGNEDREAL  shift, and go to state 145


state 105

   60 expression_arithmetique: SIGNEDREAL MULT . SIGNEDREAL

    SIGNEDREAL  shift, and go to state 146


state 106

   67 expression_arithmetique: SIGNEDREAL DIV . SIGNEDREAL

    SIGNEDREAL  shift, and go to state 147


state 107

   47 expression_arithmetique: IDF PLUS . NUM
   49                        | IDF PLUS . IDF

    NUM  shift, and go to state 148
    IDF  shift, and go to state 149


state 108

   54 expression_arithmetique: IDF MOINS . NUM
   56                        | IDF MOINS . IDF

    NUM  shift, and go to state 150
    IDF  shift, and go to state 151


state 109

   61 expression_arithmetique: IDF MULT . NUM
   63                        | IDF MULT . IDF

    NUM  shift, and go to state 152
    IDF  shift, and go to state 153


state 110

   68 expression_arithmetique: IDF DIV . NUM
   70                        | IDF DIV . IDF

    NUM  shift, and go to state 154
    IDF  shift, and go to state 155


state 111

   42 affect: IDF AFFECTION IDF POINT_VIRGULE .

    $default  reduce using rule 42 (affect)


state 112

   41 affect: IDF AFFECTION expression_arithmetique POINT_VIRGULE .

    $default  reduce using rule 41 (affect)


state 113

   37 expression_comparative: NUM EGAL . NUM

    NUM  shift, and go to state 156


state 114

   29 expression_comparative: NUM INF . NUM

    NUM  shift, and go to state 157


state 115

   33 expression_comparative: NUM SUP . NUM

    NUM  shift, and go to state 158


state 116

   38 expression_comparative: SIGNEDNUM EGAL . SIGNEDNUM

    SIGNEDNUM  shift, and go to state 159


state 117

   30 expression_comparative: SIGNEDNUM INF . SIGNEDNUM

    SIGNEDNUM  shift, and go to state 160


state 118

   34 expression_comparative: SIGNEDNUM SUP . SIGNEDNUM

    SIGNEDNUM  shift, and go to state 161


state 119

   39 expression_comparative: REAL EGAL . REAL

    REAL  shift, and go to state 162


state 120

   31 expression_comparative: REAL INF . REAL

    REAL  shift, and go to state 163


state 121

   35 expression_comparative: REAL SUP . REAL

    REAL  shift, and go to state 164


state 122

   40 expression_comparative: SIGNEDREAL EGAL . SIGNEDREAL

    SIGNEDREAL  shift, and go to state 165


state 123

   32 expression_comparative: SIGNEDREAL INF . SIGNEDREAL

    SIGNEDREAL  shift, and go to state 166


state 124

   36 expression_comparative: SIGNEDREAL SUP . SIGNEDREAL

    SIGNEDREAL  shift, and go to state 167


state 125

   21 condition: SI PARENTHOISE_OUVRANTE expression_comparative PARENTHOISE_FERMANTE . ALORS bloc SINON bloc
   22          | SI PARENTHOISE_OUVRANTE expression_comparative PARENTHOISE_FERMANTE . ALORS bloc SINON condition
   23          | SI PARENTHOISE_OUVRANTE expression_comparative PARENTHOISE_FERMANTE . ALORS bloc SINON LOWER
   24          | SI PARENTHOISE_OUVRANTE expression_comparative PARENTHOISE_FERMANTE . ALORS bloc

    ALORS  shift, and go to state 168


state 126

   17 instruction: AFFICHE PARENTHOISE_OUVRANTE liste_arguments PARENTHOISE_FERMANTE . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 169


state 127

   27 liste_arguments: liste_arguments VIRGULE . TEXT
   28                | liste_arguments VIRGULE . IDF

    TEXT  shift, and go to state 170
    IDF   shift, and go to state 171


state 128

   43 expression_arithmetique: NUM PLUS NUM .

    $default  reduce using rule 43 (expression_arithmetique)


state 129

   48 expression_arithmetique: NUM PLUS IDF .

    $default  reduce using rule 48 (expression_arithmetique)


state 130

   50 expression_arithmetique: NUM MOINS NUM .

    $default  reduce using rule 50 (expression_arithmetique)


state 131

   55 expression_arithmetique: NUM MOINS IDF .

    $default  reduce using rule 55 (expression_arithmetique)


state 132

   57 expression_arithmetique: NUM MULT NUM .

    $default  reduce using rule 57 (expression_arithmetique)


state 133

   62 expression_arithmetique: NUM MULT IDF .

    $default  reduce using rule 62 (expression_arithmetique)


state 134

   64 expression_arithmetique: NUM DIV NUM .

    $default  reduce using rule 64 (expression_arithmetique)


state 135

   69 expression_arithmetique: NUM DIV IDF .

    $default  reduce using rule 69 (expression_arithmetique)


state 136

   44 expression_arithmetique: SIGNEDNUM PLUS SIGNEDNUM .

    $default  reduce using rule 44 (expression_arithmetique)


state 137

   51 expression_arithmetique: SIGNEDNUM MOINS SIGNEDNUM .

    $default  reduce using rule 51 (expression_arithmetique)


state 138

   58 expression_arithmetique: SIGNEDNUM MULT SIGNEDNUM .

    $default  reduce using rule 58 (expression_arithmetique)


state 139

   65 expression_arithmetique: SIGNEDNUM DIV SIGNEDNUM .

    $default  reduce using rule 65 (expression_arithmetique)


state 140

   45 expression_arithmetique: REAL PLUS REAL .

    $default  reduce using rule 45 (expression_arithmetique)


state 141

   52 expression_arithmetique: REAL MOINS REAL .

    $default  reduce using rule 52 (expression_arithmetique)


state 142

   59 expression_arithmetique: REAL MULT REAL .

    $default  reduce using rule 59 (expression_arithmetique)


state 143

   66 expression_arithmetique: REAL DIV REAL .

    $default  reduce using rule 66 (expression_arithmetique)


state 144

   46 expression_arithmetique: SIGNEDREAL PLUS SIGNEDREAL .

    $default  reduce using rule 46 (expression_arithmetique)


state 145

   53 expression_arithmetique: SIGNEDREAL MOINS SIGNEDREAL .

    $default  reduce using rule 53 (expression_arithmetique)


state 146

   60 expression_arithmetique: SIGNEDREAL MULT SIGNEDREAL .

    $default  reduce using rule 60 (expression_arithmetique)


state 147
